--- a/docs/guide/src/docs/asciidoc/index.adoc
+++ b/docs/guide/src/docs/asciidoc/index.adoc
@@ -8,6 +8,7 @@ include::{includedir}/_links.adoc[]
 
 :leveloffset: 1
 include::{includedir}/introduction.adoc[]
+include::{includedir}/usage.adoc[]
 
 = Links
 
